--- a/HAPROXY/haproxy.cfg
+++ b/HAPROXY/haproxy.cfg
@@ -2,8 +2,7 @@ global
         log /dev/log   local0
         log 127.0.0.1   local1 notice
         maxconn 4096
-        user haproxy
-        group haproxy
+        gid haproxy
         daemon
 
 defaults
@@ -26,6 +25,8 @@ bind 0.0.0.0:80
     balance roundrobin
     option httpclose
     option forwardfor
-    server webserver01 192.168.200.3:80 check
-    server webserver02 192.168.200.4:80 check
+    server web01 34.203.204.147:80 check
+    server web02 3.83.191.85:80 check
+
+
 
